[ch216] Changing files and variables for more meaningful

--- a/locales/en/sign-up.json
+++ b/locales/en/sign-up.json
@@ -1,18 +1,20 @@
 {
-  "warningText": "You have unsaved changes - are you sure you want to leave this page?",
+  "warningText": "You have unsaved changes. Are you sure you want to leave this page?",
   "profileImageCaution": "<0>Maximum file size 1.5 MB</0>JPG & PNG only",
-  "usernameLabel": "Username",
-  "emailLabel": "Email",
-  "passwordLabel": "Password",
-  "firstNameLabel": "First Name",
-  "lastNameLabel": "Last Name",
+  "username": "Username",
+  "email": "Email",
+  "password": "Password",
+  "firstName": "First Name",
+  "lastName": "Last Name",
   "usernamePlaceholder": "Enter your username",
   "emailPlaceholder": "Enter your email",
   "passwordPlaceholder": "Enter your password",
   "firstNamePlaceholder": "Enter your first name",
   "lastNamePlaceholder": "Enter your last name",
-  "usernameErrorMessage": "Your username has already been used.",
-  "emailErrorMessage": "Email is incorrect.",
-  "passwordErrorMessage": "Password should be at least 8 characters.",
-  "nameErrorMessage": "Invalid input type."
+  "inputFieldBlank": "This is a required field.",
+  "usernameAlreadyUsed": "Your username has already been used. Please use a different one.",
+  "emailIncorrectFormat": "Your email is incorrect. Please recheck the email format or use a different one.",
+  "passwordContainLessCharacter": "Password must contain at least 8 characters.",
+  "passwordSimilarToUsername": "Password must be different from Username.",
+  "passwordDefaultRequired": "Password must contain at least 1 lowercase, 1 uppercase character and 1 number."
 }
