--- a/locales/th/sign-up.json
+++ b/locales/th/sign-up.json
@@ -1,18 +1,20 @@
 {
-  "warningText": "แก้ไข - คุณแน่ใจหรือว่าต้องการออกจากหน้านี้",
+  "warningText": "การแก้ไขของคุณยังไม่ได้บันทึกไว้ คุณแน่ใจหรือว่าต้องการออกจากหน้านี้",
   "profileImageCaution": "<0>ขนาดห้ามเกิน 1.5 MB</0>รองรับประเภทไฟล์ JPG & PNG เท่านั้น",
-  "usernameLabel": "ชื่อผู้ใช้",
-  "emailLabel": "อีเมล",
-  "passwordLabel": "รหัสผ่าน",
-  "firstNameLabel": "ชื่อจริง",
-  "lastNameLabel": "นามสกุล",
+  "username": "ชื่อผู้ใช้",
+  "email": "อีเมล",
+  "password": "รหัสผ่าน",
+  "firstName": "ชื่อจริง",
+  "lastName": "นามสกุล",
   "usernamePlaceholder": "ป้อนชื่อผู้ใช้ของคุณ",
   "emailPlaceholder": "ป้อนอีเมลของคุณ",
   "passwordPlaceholder": "ป้อนรหัสผ่านของคุณ",
   "firstNamePlaceholder": "ป้อนชื่อจริงของคุณ",
   "lastNamePlaceholder": "ป้อนนามสกุลของคุณ",
-  "usernameErrorMessage": "ยูสเซอร์ชื่อนี้ถูกใช้ไปแล้ว",
-  "emailErrorMessage": "เมลของคุณไม่ถูกต้อง",
-  "passwordErrorMessage": "รหัสผ่านอย่างน้องต้องมี 8 ตัวอักษา",
-  "nameErrorMessage": "ไม่สามารถใส่ค่านี้ได้"
+  "inputFieldBlank": "กรุณากรอกข้อมูลลงในช่องว่าง",
+  "usernameAlreadyUsed": "บัญชีชื่อนี้ถูกใช้ไปแล้ว กรุณาใช้ชื่ออื่น",
+  "emailIncorrectFormat": "อีเมลของคุณไม่ถูกต้อง กรุณาตรวจสอบและป้อนข้อมูลใหม่",
+  "passwordContainLessCharacter": "รหัสผ่านอย่างน้อยต้องมี 8 ตัวอักษร",
+  "passwordSimilarToUsername": "ไม่สามารถใช้รหัสผ่านชื่อเดียวกับบัญชีผู้ใช้งานได้",
+  "passwordDefaultRequired": "รหัสผ่านต้องมีตัวพิมพ์เล็ก, ตัวพิมพ์ใหญ่, หมายเลข อย่างน้อยอย่างละ1ตัว"
 }
