--- a/locales/th/sign-up.json
+++ b/locales/th/sign-up.json
@@ -11,7 +11,7 @@
   "passwordPlaceholder": "ป้อนรหัสผ่านของคุณ",
   "firstNamePlaceholder": "ป้อนชื่อจริงของคุณ",
   "lastNamePlaceholder": "ป้อนนามสกุลของคุณ",
-  "inputFieldBlank": "กรุณากรอกข้อมูลลงในช่องว่าง",
+  "inputImproperName": "กรุณากรอกข้อมูลลงในช่องว่างให้ถูกต้อง",
   "usernameAlreadyUsed": "บัญชีชื่อนี้ถูกใช้ไปแล้ว กรุณาใช้ชื่ออื่น",
   "emailIncorrectFormat": "อีเมลของคุณไม่ถูกต้อง กรุณาตรวจสอบและป้อนข้อมูลใหม่",
   "passwordContainLessCharacter": "รหัสผ่านอย่างน้อยต้องมี 8 ตัวอักษร",
